force-app/main/default/objects/Campaign_Email__c/Campaign_Email__c.object-meta.xml
<CustomObject>
    <description>Campaigns Emails is a custom Junction Object which relates Individual Email Results to a given Campaign. When creating a Campaign Emails record, the Salesforce User provides the SFMC Email Asset ID they would like to track. The Campaign Email finds all Individual Email Result records with the matching Asset ID through the &quot;Asset ID&quot; Lookup field. These are then available from the Individual Email Results Related List on the Campaign Emails record.</description>
    <label>Campaign Email</label>
    <nameField>
        <label>Campaign Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>