force-app/main/default/objects/Campaign_Email__c/fields/SFMC_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Email_ID__c</fullName>
    <description>The SFMC Email&apos;s Asset ID as it appears in SFMC Content Builder.</description>
    <externalId>true</externalId>
    <inlineHelpText>The SFMC Email&apos;s Asset ID as it appears in SFMC Content Builder.</inlineHelpText>
    <label>SFMC Email ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>