force-app/main/default/objects/Campaign_Email__c/fields/SFMC_Email_Location__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Email_Location__c</fullName>
    <description>The location of the SFMC Email in the folder directory available in SFMC Content Builder.</description>
    <inlineHelpText>The location of the SFMC Email in the folder directory available in SFMC Content Builder.</inlineHelpText>
    <label>SFMC Email Location</label>
    <type>TextArea</type>
</CustomField>