force-app/main/default/objects/Campaign_Email__c/fields/SFMC_Email_Name__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Email_Name__c</fullName>
    <description>The name of the SFMC Email as it appears in SFMC Content Builder.</description>
    <inlineHelpText>The name of the SFMC Email as it appears in SFMC Content Builder.</inlineHelpText>
    <label>SFMC Email Name</label>
    <type>TextArea</type>
</CustomField>